--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,27 @@
 {  "compilerOptions":
-   {  "strict": true
-   ,  "lib": ["es2019"]
-   ,  "newLine": "lf"
-   ,  "target": "es2019"
-   ,  "module": "es6"
+   // type checking
+   {  "exactOptionalPropertyTypes": true
+   ,  "noImplicitAny": true
+   ,  "noImplicitReturns": true
+   ,  "noImplicitThis": true
+   ,  "noUncheckedIndexedAccess": true
+   ,  "strict": true
+   ,  "useUnknownInCatchVariables": true
+   // modules
+   ,  "module": "es2020"
    ,  "moduleResolution": "node"
-   ,  "emitDeclarationOnly": false
+   // emit
+   ,  "newLine": "lf"
+   ,  "noEmitOnError": true
+   ,  "outDir": "bin"
+   // interop constraints
+   ,  "esModuleInterop": true
+   ,  "forceConsistentCasingInFileNames": true
+   // Language and Environment
+   ,  "lib": ["es2020"]
+   ,  "target": "es2020"
+   // Projects
+   ,  "incremental": true
    }
-   ,  "include": ["src/**/*.ts"],
+,  "include": ["src/**/*.ts"],
 }
