array & tuple work fine
things to finish up:
- prim_t
- text.stringify
- union

I think that's it though

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "foundatsion",
+	"name": "@axel-hq/foundatsion",
 	"version": "0.0.0",
 	"repository": "git@github.com:axel-hq/foundatsion.git",
 	"contributors": [
