--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "@axel-hq/foundatsion",
-   "version": "0.0.1",
-   "description": "TypeScript runtime type checking foundation",
+   "version": "0.0.2",
+   "description": "A library for runtime type-checking for TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
    "bugs": {
