--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@axel-hq/foundatsion",
-   "version": "0.0.2",
+   "version": "0.1.0",
    "description": "A library for runtime type-checking for TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
@@ -22,10 +22,10 @@
       }
    ],
    "files": ["bin"],
-   "types": "./bin/dts/mod.d.ts",
+   "types": "./bin/dts/index.d.ts",
    "exports": {
-      "import": "./bin/es2020/mod.js",
-      "require": "./bin/commonjs/mod.js"
+      "import": "./bin/es2020/index.js",
+      "require": "./bin/commonjs/index.js"
    },
    "devDependencies": {
       "@typescript-eslint/eslint-plugin": "^5.30.5",
