--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
    ,  "strict": true
    ,  "useUnknownInCatchVariables": true
    // modules
-   // ,  "module": "es2020"
-   ,  "moduleResolution": "node"
+   ,  "moduleResolution": "node16"
    // emit
    ,  "newLine": "lf"
    ,  "noEmitOnError": true
