--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@axel-hq/foundatsion",
-   "version": "0.2.2",
+   "version": "0.2.3",
    "description": "A library for runtime type-checking for TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
@@ -24,10 +24,10 @@
    "files": [
       "bin"
    ],
-   "types": "./bin/dts/index.d.ts",
    "exports": {
-      "import": "./bin/es6/index.js",
-      "require": "./bin/cjs/index.js"
+      "types": "./bin/dts/index.d.ts",
+      "require": "./bin/cjs/index.js",
+      "import": "./bin/es6/index.js"
    },
    "devDependencies": {
       "@typescript-eslint/eslint-plugin": "^5.30.5",
