--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "url": "https://github.com/axel-hq/foundatsion/issues",
       "email": "marcus@axel.dev"
    },
-   "license": "ISC",
+   "license": "Unlicense",
    "author": {
       "name": "Cole Gannon",
       "email": "cole@axel.dev",
