--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@axel-hq/foundatsion",
-   "version": "0.3.2",
+   "version": "0.3.3",
    "description": "A library for runtime type-checking for TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
@@ -33,6 +33,7 @@
       "@typescript-eslint/eslint-plugin": "^5.30.5",
       "@typescript-eslint/parser": "^5.30.5",
       "eslint": "^8.22.0",
+      "ts-toolbelt": "^9.6.0",
       "typescript": "^4.6.4"
    }
 }
