--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,11 @@
       "ꓸ": true,
    },
    "cSpell.words": [
+      "assertish",
       "artti",
+      "castish",
+      "casty",
+      "isish",
       "rtti",
       "rttii",
       "rꓸassert",
