removed mistakenly added zzz.ts
maybe I shouldn't've rushed marcus to just commit and push after all

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
    },
    "license": "Unlicense",
    "author": {
-      "name": "Cole Gannon",
-      "email": "cole@axel.dev",
+      "name": "A. S. Pando",
       "url": "https://github.com/AS-Pando"
    },
    "contributors": [
