passage[] as input to be completed
tomorrow, that is

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
       "rtti",
       "rttii",
       "rꓸassert",
-      "thisꓸpassages",
       "tꓸassert"
-   ]
+   ],
+   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
