--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
    "devDependencies": {
       "@typescript-eslint/eslint-plugin": "^5.30.5",
       "@typescript-eslint/parser": "^5.30.5",
+      "ava": "^5.1.0",
       "eslint": "^8.22.0"
    },
    "dependencies": {
