no way to solve namespaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
    // Projects
    // ,  "incremental": true
    }
-,  "include": ["src/*.ts", "src/newtype.ts", "src/type_traits/type_traits.ts"]
+,  "include": ["src/*.ts"]
 }
