--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
    // emit
    ,  "newLine": "lf"
    ,  "noEmitOnError": true
-   // ,  "sourceMap": true
+   ,  "sourceMap": true
    // ,  "outDir": "bin"
    // interop constraints
    ,  "esModuleInterop": true
