--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
       "@typescript-eslint/eslint-plugin": "^5.30.5",
       "@typescript-eslint/parser": "^5.30.5",
       "ava": "^5.1.0",
-      "eslint": "^8.22.0"
+      "eslint": "^8.22.0",
+      "typescript": "^4.9.3"
    },
-   "dependencies": {
+   "peerDependencies": {
       "typescript": "^4.9.3"
    },
    "engines": {
