--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@axel-hq/foundatsion",
-   "version": "0.5.4",
+   "version": "0.5.6",
    "description": "A library for runtime type-checking for TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
@@ -32,9 +32,10 @@
       "@typescript-eslint/eslint-plugin": "^5.30.5",
       "@typescript-eslint/parser": "^5.30.5",
       "ava": "^5.1.0",
-      "eslint": "^8.22.0"
+      "eslint": "^8.22.0",
+      "typescript": "^4.9.3"
    },
-   "dependencies": {
+   "peerDependencies": {
       "typescript": "^4.9.3"
    },
    "engines": {
