--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,13 @@
    ,  "newLine": "lf"
    ,  "noEmitOnError": true
    ,  "sourceMap": true
-   // ,  "outDir": "bin"
+   ,  "removeComments": false
    // interop constraints
    ,  "esModuleInterop": true
    ,  "forceConsistentCasingInFileNames": true
    // Language and Environment
    ,  "lib": ["es2020", "dom"]
    ,  "target": "es2020"
-   // Projects
-   // ,  "incremental": true
    }
 ,  "include": ["src/*.ts"]
 }
