--- a/package.json
+++ b/package.json
@@ -33,12 +33,18 @@
       "@typescript-eslint/parser": "^5.30.5",
       "ava": "^5.1.0",
       "eslint": "^8.22.0",
-      "typescript": "^4.9.3"
-   },
-   "peerDependencies": {
-      "typescript": "^4.9.3"
+      "ts-node": "^10.9.1",
+      "typescript": "^4.9.4"
    },
    "engines": {
       "node": ">=16"
+   },
+   "ava": {
+      "extensions": [
+         "ts"
+      ],
+      "require": [
+         "ts-node/register"
+      ]
    }
 }
