--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,9 @@
       "ꓸ": true,
    },
    "cSpell.words": [
-      "assertish",
       "artti",
+      "assertish",
+      "callish",
       "castish",
       "casty",
       "isish",
