restructured project configs
also removed the dependency on ts-node!
this means that tests that do not compile won't just hang.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,33 @@
-{  "root": true
-,  "parser": "@typescript-eslint/parser"
-,  "plugins": ["@typescript-eslint"]
-,  "overrides": [{"files": "src/*.ts", "parserOptions": {"project": "tsconfig.json"}}]
-,  "rules":
-   {  "block-spacing": "error"
-   ,  "quote-props": ["error", "consistent-as-needed"]
-   ,  "@typescript-eslint/adjacent-overload-signatures": "warn"
-   ,  "@typescript-eslint/comma-dangle": ["error", "always-multiline"]
-   ,  "@typescript-eslint/comma-spacing": ["error", {"before": false, "after": true}]
-   ,  "@typescript-eslint/consistent-indexed-object-style": ["error", "index-signature"]
-   ,  "@typescript-eslint/consistent-type-assertions": ["error", {"assertionStyle": "as"}]
-   ,  "@typescript-eslint/explicit-function-return-type": "warn"
-   ,  "@typescript-eslint/keyword-spacing": "error"
-   ,  "@typescript-eslint/member-delimiter-style": "error"
-   ,  "@typescript-eslint/method-signature-style": ["error", "property"]
-   ,  "@typescript-eslint/no-confusing-void-expression": "error"
-   ,  "@typescript-eslint/no-duplicate-imports": "warn"
-   ,  "@typescript-eslint/no-extra-semi": "error"
-   ,  "@typescript-eslint/no-extra-non-null-assertion": "warn"
-   ,  "@typescript-eslint/no-loop-func": "warn"
-   ,  "@typescript-eslint/no-loss-of-precision": "error"
-   ,  "@typescript-eslint/no-require-imports": "error"
-   ,  "@typescript-eslint/object-curly-spacing": "error"
-   ,  "@typescript-eslint/quotes": ["error", "double", {"avoidEscape": true}]
-   ,  "@typescript-eslint/prefer-as-const": "warn"
-   ,  "@typescript-eslint/prefer-namespace-keyword": "error"
-   ,  "@typescript-eslint/space-before-blocks": "error"
-   ,  "@typescript-eslint/semi": ["error", "always", {"omitLastInOneLineBlock": true}]
-   ,  "@typescript-eslint/type-annotation-spacing": "warn"
+{
+   "root": true,
+   "parser": "@typescript-eslint/parser",
+   "plugins": ["@typescript-eslint"],
+   "parserOptions": {"project": "tsconfig.json"},
+   "rules": {
+      "block-spacing": "error",
+      "quote-props": ["error", "consistent-as-needed"],
+      "@typescript-eslint/adjacent-overload-signatures": "warn",
+      "@typescript-eslint/comma-dangle": ["error", "always-multiline"],
+      "@typescript-eslint/comma-spacing": ["error", {"before": false, "after": true}],
+      "@typescript-eslint/consistent-indexed-object-style": ["error", "index-signature"],
+      "@typescript-eslint/consistent-type-assertions": ["error", {"assertionStyle": "as"}],
+      "@typescript-eslint/explicit-function-return-type": "warn",
+      "@typescript-eslint/keyword-spacing": "error",
+      "@typescript-eslint/member-delimiter-style": "error",
+      "@typescript-eslint/method-signature-style": ["error", "property"],
+      "@typescript-eslint/no-confusing-void-expression": "error",
+      "@typescript-eslint/no-duplicate-imports": "warn",
+      "@typescript-eslint/no-extra-semi": "error",
+      "@typescript-eslint/no-extra-non-null-assertion": "warn",
+      "@typescript-eslint/no-loop-func": "warn",
+      "@typescript-eslint/no-loss-of-precision": "error",
+      "@typescript-eslint/no-require-imports": "error",
+      "@typescript-eslint/object-curly-spacing": "error",
+      "@typescript-eslint/quotes": ["error", "double", {"avoidEscape": true}],
+      "@typescript-eslint/prefer-as-const": "warn",
+      "@typescript-eslint/prefer-namespace-keyword": "error",
+      "@typescript-eslint/space-before-blocks": "error",
+      "@typescript-eslint/semi": ["error", "always", {"omitLastInOneLineBlock": true}],
+      "@typescript-eslint/type-annotation-spacing": "warn"
    }
 }
