--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "@axel-hq/foundatsion",
    "version": "0.6.2-alpha",
-   "description": "A library for runtime type-checking for TypeScript",
+   "description": "A library for runtime type-checking in TypeScript",
    "homepage": "https://github.com/axel-hq/foundatsion#readme",
    "repository": "git@github.com:axel-hq/foundatsion.git",
    "bugs": {
@@ -20,9 +20,7 @@
          "url": "https://github.com/rhiz0-eth"
       }
    ],
-   "files": [
-      "bin"
-   ],
+   "files": ["bin/cjs", "bin/es6", "bin/dts"],
    "exports": {
       "types": "./bin/dts/index.d.ts",
       "require": "./bin/cjs/index.js",
@@ -33,18 +31,9 @@
       "@typescript-eslint/parser": "^5.30.5",
       "ava": "^5.1.0",
       "eslint": "^8.22.0",
-      "ts-node": "^10.9.1",
       "typescript": "^4.9.4"
    },
    "engines": {
       "node": ">=16"
-   },
-   "ava": {
-      "extensions": [
-         "ts"
-      ],
-      "require": [
-         "ts-node/register"
-      ]
    }
 }
