--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,4 @@
-{  "compilerOptions":
-   // type checking
-   {  "exactOptionalPropertyTypes": true
-   ,  "noImplicitAny": true
-   ,  "noImplicitReturns": true
-   ,  "noImplicitThis": true
-   ,  "noUncheckedIndexedAccess": true
-   ,  "strict": true
-   ,  "useUnknownInCatchVariables": true
-   // modules
-   ,  "moduleResolution": "node16"
-   // emit
-   ,  "newLine": "lf"
-   ,  "noEmitOnError": true
-   ,  "sourceMap": true
-   ,  "removeComments": false
-   // interop constraints
-   ,  "esModuleInterop": true
-   ,  "forceConsistentCasingInFileNames": true
-   // Language and Environment
-   ,  "lib": ["es2020", "dom"]
-   ,  "target": "es2020"
-   }
-,  "include": ["src/*.ts"]
+{
+   "extends": "./tsconfig.base.json",
+   "include": ["src/*.ts", "spec/*.spec.ts"],
 }
